--- a/ecom.html
+++ b/ecom.html
@@ -137,17 +137,17 @@
                     <p style="color: red;">Be Healthy Testy Food</p>
                 </div>
                 <div class="row ">
-                    <div class="col-lg-4   col-sm-12">
+                    <div class="col-lg-4   col-sm-12  text-center">
                     <img src="pic1.jpg" class="image-fluid mb-3" alt="" width="300px" height="300px">
                     <h1>Best Quality Product</h1>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui assumenda ducimus quibusdam, aperiam earum provident quia voluptatum deleniti praesentium nesciunt repellendus veniam nobis quo, error eaque impedit rerum sunt sed.</p>
                     </div>
-                    <div class="col-lg-4   col-sm-12">
+                    <div class="col-lg-4   col-sm-12  text-center">
                         <img src="pic2.jpg" class="image-fluid mb-3" alt="" width="300px" height="300px">
                         <h1>Best Quality Product</h1>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui assumenda ducimus quibusdam, aperiam earum provident quia voluptatum deleniti praesentium nesciunt repellendus veniam nobis quo, error eaque impedit rerum sunt sed.</p>
                         </div>
-                        <div class="col-lg-4   col-sm-12">
+                        <div class="col-lg-4   col-sm-12  text-center">
                             <img src="pic3.jpg" class="image-fluid mb-3" alt="" width="300px" height="300px">
                             <h1>Best Quality Product</h1>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui assumenda ducimus quibusdam, aperiam earum provident quia voluptatum deleniti praesentium nesciunt repellendus veniam nobis quo, error eaque impedit rerum sunt sed.</p>
@@ -315,14 +315,14 @@
                             <div class="col-lg-7">
                                 <div class="row">
                                     <div class="col-lg-6">
-                                        <input type="text"  class="foam-control  bg-light" placeholder="FIRSTNAME" >
+                                        <input type="text"  class="foam-control  bg-light  " placeholder="FIRSTNAME" >
                                     </div>
                                     <div class="col-lg-6">
-                                        <input type="text"  class="foam-control  bg-light" placeholder="LASTNAME" >
+                                        <input type="text"  class="foam-control  bg-light   " placeholder="LASTNAME" >
                                     </div>
                            </div>
                              <div class="col-lg-12 py-3">
-                                <textarea name=""   class="foam-control bg-light" placeholder="ENTER YOUR EMAIL ADDRESS" id="" cols="50" rows="5"></textarea>
+                                <textarea name=""   class="foam-control bg-light" placeholder="ENTER YOUR EMAIL ADDRESS" style="height: 200px;   width: 200px;" ></textarea>
                              </div>
                                 </div>
                         </div>  
